--- a/portal-web/src/main/webapp/views/ricerca_risorsa.html
+++ b/portal-web/src/main/webapp/views/ricerca_risorsa.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AdminLTE 3 | Blank Page</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
@@ -194,7 +195,7 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Dashboard
+                Sezioni
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
@@ -202,19 +203,13 @@
               <li class="nav-item">
                 <a href="../../index.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v1</p>
+                  <p>Home</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="../../index2.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v2</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../../index3.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v3</p>
+                  <p>Cliente</p>
                 </a>
               </li>
             </ul>
@@ -835,7 +830,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Blank Page</h1>
+            <h1>Ricerca Risorsa</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -850,31 +845,77 @@
     <!-- Main content -->
     <section class="content">
 
-      <!-- Default box -->
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">Title</h3>
+     <!-- Inserire struttura risorsa con tabella e dropdown -->
 
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-              <i class="fas fa-minus"></i>
-            </button>
-            <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
-              <i class="fas fa-times"></i>
-            </button>
+    <!-- Ricerca per nome-->
+
+
+      <form>
+
+        <ul class="pagination justify-content-center">
+          <div class="row">
+
+            <div class="col">
+
+              Nominativo
+              <input type="text" class="form-control basicAutoComplete" id="nominativo" placeholder="Nominativo"  autocomplete="off">
+            </div>
           </div>
-        </div>
-        <div class="card-body">
-          Start creating your amazing application!
-        </div>
-        <!-- /.card-body -->
-        <div class="card-footer">
-          Footer
-        </div>
-        <!-- /.card-footer-->
-      </div>
-      <!-- /.card -->
+        </ul>
+      </form>
 
+
+      <!-- Cliente/Skill-->
+
+
+      <div class="col-3">
+      <div class="btn-group">
+        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Cliente
+        </button>
+        <ul class="dropdown-menu">
+        </ul>
+      </div>
+      <div class="btn-group">
+        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"  data-bs-toggle="dropdown" aria-expanded="false">
+          Skill
+        </button>
+        <ul class="dropdown-menu">
+        </ul>
+      </div>
+      </div>
+      <!--Pulsante ricerca-->
+
+
+      <div class="col-11">
+        <button type="button"  id="btn_ricerca"  class="btn btn-primary btn-lg float-right">Search</button>
+      </div>
+
+
+
+      <!-- Tabella (Nominativo, Stato, Cliente Associato alla Risorsa, Cv)-->
+
+      <table class="table table-white table-striped" id="listaRisorse">
+
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Nominativo</th>
+          <th scope="col">Stato</th>
+          <th scope="col">Termine Occupazione</th>
+          <th scope="col">Cliente Associato</th>
+          <th scope="col">CV</th>
+        </tr>
+        <tbody>
+
+        <tr>
+
+        </tr>
+
+        </tbody>
+      </table>
+
+
+      <!-- Fine struttura risorsa con tabella e dropdown -->
     </section>
     <!-- /.content -->
   </div>
@@ -895,6 +936,8 @@
 </div>
 <!-- ./wrapper -->
 
+
+<script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@master/dist/latest/bootstrap-autocomplete.min.js"></script>
 <!-- jQuery -->
 <script src="static/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
