--- a/portal-web/src/main/webapp/views/inserisci_risorsa.html
+++ b/portal-web/src/main/webapp/views/inserisci_risorsa.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +11,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="static/plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="static/css/adminlte.min.css">
+
+
+
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -852,41 +852,39 @@
     <!-- Ricerca per nome-->
 
 
-      <form>
 
-        <ul class="pagination justify-content-center">
-          <div class="row">
+      <div class="card-body">
+        <div class="form-group">
+          <label for="nominativo">Nominativo</label>
+          <input class="form-control" id="nominativo" placeholder="Enter name">
+        </div>
+        <div class="form-group">
+          <label for="skill">Skill Tag Input</label>
 
-            <div class="col">
+          <input  class="form-control" id="skill" name="example" value="jQuery,Script,Net" placeholder="Please input some tags">
 
-              Nominativo
-              <input type="text" class="form-control basicAutoComplete" id="nominativo" placeholder="Nominativo"  autocomplete="off">
-            </div>
-          </div>
-        </ul>
-      </form>
-
-
-      <!-- Cliente/Skill-->
+        </div>
 
 
-      <div class="col-3">
-      <div class="btn-group">
-        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Cliente
-        </button>
-        <ul class="dropdown-menu">
-        </ul>
-      </div>
-      <div class="btn-group">
-        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"  data-bs-toggle="dropdown" aria-expanded="false">
-          Skill
-        </button>
-        <ul class="dropdown-menu">
-        </ul>
-      </div>
-      </div>
-      <!--Pulsante ricerca-->
+
+
+        <!-- Large button groups (default and split) -->
+        <div class="btn-group col-5">
+          <button class="btn btn-secondary btn-lg dropdown-toggle" id="cliente" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Cliente
+          </button>
+          <ul class="dropdown-menu">
+            ...
+          </ul>
+        </div>
+        <div class="btn-group col-5">
+          <button class="btn btn-secondary btn-lg dropdown-toggle" id="stato" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Stato
+          </button>
+          <ul class="dropdown-menu">
+            ...
+          </ul>
+        </div>
 
 
       <div class="col-11">
@@ -938,9 +936,13 @@
 </div>
 <!-- ./wrapper -->
 
+
 <script src="static/plugins/jquery/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@master/dist/latest/bootstrap-autocomplete.min.js"></script>
-<!-- jQuery -->
+<script src="static/js/neotech_ajax.js"></script>
+<script src="static/js/ricerca_risorsa.js"></script>
+
+
 
 <!-- Bootstrap 4 -->
 <script src="static/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
